--- a/amplify.yml
+++ b/amplify.yml
@@ -4,8 +4,7 @@ frontend:
     preBuild:
       commands:
         - echo Installing Flutter...
-        - curl -O https://storage.googleapis.com/download/flutter_macos_v2.10.3-stable.tar.xz
-        - tar xf flutter_macos_v2.10.3-stable.tar.xz
+        - git clone https://github.com/flutter/flutter.git -b stable
         - export PATH="$PATH:`pwd`/flutter/bin"
         - flutter --version
         - flutter pub get
